# logos-tictactoe-app

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  flake.nix  metadata.json  scaffold.toml
.github/workflows/: build.yml
docs/ideas/: tictactoe-slice-1-5.md
proto/: tictactoe.proto
src/: tictactoe.rep  tictactoe_backend.cpp  tictactoe_backend.h  tictactoe_interface.h  tictactoe_plugin.cpp  tictactoe_plugin.h
src/qml/: Main.qml
